Fix unsafe call to Class.newInstance()
The newInstance method propagates any exception thrown by the no-arg
constructor, including checked exceptions. Use of this method
effectively bypasses the compile-time exception checking that would
otherwise be performed by the compiler. Replacing such a method call
with a call to the java.lang.reflect.Constructor.newInstance() method
avoids this problem by wrapping any exception thrown by the constructor
in a java.lang.reflect.InvocationTargetException